# splat

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  imgui.ini
assets/models/ball-lens/: ball-lens.json  ball-lens.mtl
assets/models/cornell-box/: CornellBox-Original_fixed.blend  CornellBox-Original_fixed.json
assets/models/sanity/energy-conservation/: box.mtl  cb1.json  mb1.json  mb2-abs.json  sa1.blend  sa1.json  sa2.json
docs/: AGENTS.md
docs/conventions/: cpp.md  glsl.md
docs/git/: branches.md
docs/literatures/: guide.md
docs/project/: opacity.md  overview.md  splat.md  trace.md  trace_v1_status.md
docs/savepoints/: aov_debug_status.md  overview.md  power_sanity_status.md  scene_config_status.md  splat_v15_status.md  splat_v1_status.md  trace_v1_status.md  trace_v2_status.md
include/: bsdf.hpp  camera.hpp  debug_ui.hpp  framebuffer.hpp  image_buffer.hpp  kernel_texture.hpp  medium.hpp  mesh.hpp  model.hpp  photon.hpp  photon_tracer.hpp  point_light.hpp  random.hpp  ray_camera.hpp  ray_model.hpp  sampling.hpp  scene.hpp  scene_config.hpp  shader.hpp
shaders/: beam.fs  beam.vs  color.fs  color.vs  depth.fs  depth_peel.fs  flat_color.fs  flat_trans.fs  geom.fs  geom.vs  light.fs  light.vs  medium_debug.fs  point.fs  point.vs  shader.fs  shader.vs  shadow.fs  shadow.gs  shadow.vs  splat.fs  splat.gs  splat.vs  wireframe.vs
src/: bsdf.cpp  camera.cpp  debug_ui.cpp  framebuffer.cpp  image_buffer.cpp  json.cpp  kernel_texture.cpp  main.cpp  mesh.cpp  model.cpp  photon_tracer.cpp  point_light.cpp  ray_camera.cpp  ray_model.cpp  sampling.cpp  scene.cpp  scene_config.cpp  scene_gl.cpp  shader.cpp  tiny_bvh.cpp
tests/: CMakeLists.txt  bsdf_test.cpp  bvh_intersect_image_test.cpp  bvh_intersect_test.cpp  kernel_texture_test.cpp  photon_tracer_test.cpp  point_light_test.cpp  ray_model_test.cpp  sampling_test.cpp  scene_config_test.cpp  scene_test.cpp  smoke_test.cpp
